Fix layout breaking on browsers other than FF

--- a/less/helper/layout.less
+++ b/less/helper/layout.less
@@ -12,12 +12,11 @@ body {
   
   display: grid;
   
-  grid-template-columns: 0% auto 0%;
-  grid-template-rows: auto;
+  grid-template-columns: 0% 100% 0%;
+  grid-template-rows: 100%;
   
   @media(min-width: 1200px) {
-    grid-template-columns: auto 1200px auto;
-    grid-template-rows: auto;
+    grid-template-columns: calc(50% - 600px) 1200px calc(50% - 600px);
   }
 }
 
@@ -35,7 +34,7 @@ body {
   background-color: @color-background;
   display: grid;
   grid-template-columns: 25% 75%;
-  grid-template-rows: 75px auto;
+  grid-template-rows: 75px calc(100% - 75px);
 }
 
 // Top row
