--- a/less/partial/launchpad.less
+++ b/less/partial/launchpad.less
@@ -4,7 +4,7 @@
   
   display: grid;
   grid-template-columns: 33.4% 33.3% 33.3%;
-  grid-template-rows: auto;
+  grid-template-rows: 100%;
   
   .launchpad {
     position: relative;
@@ -12,8 +12,8 @@
     padding-top: 20px;
     
     display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: 30px auto;
+    grid-template-columns: 100%;
+    grid-template-rows: 30px calc(100% - 30px);
     
     .pad {
       position: relative;
