--- a/less/partial/lobby.less
+++ b/less/partial/lobby.less
@@ -6,8 +6,8 @@
   height: calc(100% - $padding-top);
   
   display: grid;
-  grid-template-columns: auto;
-  grid-template-rows: 30px auto;
+  grid-template-columns: 100%;
+  grid-template-rows: 30px calc(100% - 30px);
   
   
   .fade, .content {
