--- a/less/partial/ship.less
+++ b/less/partial/ship.less
@@ -12,8 +12,8 @@
   
   display: grid;
   
-  grid-template-columns: auto;
-  grid-template-rows: 98px auto (@button-height + @button-margin * 2);
+  grid-template-columns: 100%;
+  grid-template-rows: 98px calc(100% - (90px + (@button-height + @button-margin * 2))) (@button-height + @button-margin * 2);
   
   
   .attributes {
@@ -31,7 +31,7 @@
     
     display: grid;
     
-    grid-template-columns: auto;
+    grid-template-columns: 100%;
     grid-template-rows: 20px 28px 30px;
     
     grid-gap: 5px;
@@ -98,7 +98,7 @@
       z-index: 9999;
       
       display: grid;
-      grid-template-columns: auto;
+      grid-template-columns: 100%;
       grid-template-rows: auto auto;
       
       .groups {
